# YT-ENV

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ytenv/app/: MainActivity.kt
audio-core-native/: build.gradle.kts
audio-core-native/src/main/cpp/: CMakeLists.txt  dsp_rack.cpp  dsp_rack.h  ytenv_audio_jni.cpp
audio-core-native/src/main/java/com/ytenv/audio/: AudioEngineController.kt  AutomationIntentContract.kt  (+5 more)
rn-app/: App.tsx  README_RN_ARCHITECTURE.md  package-lock.json  tsconfig.json
rn-app/src/creation/: CreationScreen.tsx
rn-app/src/dashboard/: DashboardScreen.tsx
rn-app/src/debug/: DebugScreen.tsx
rn-app/src/home/: HomeScreen.tsx
rn-app/src/network/: authMiddleware.ts  pipedClient.ts
rn-app/src/plugins/: Plugin.ts
rn-app/src/plugins/auth/: AuthPlugin.ts  WebSessionManager.ts  YouTubeWebAuthScreen.tsx
rn-app/src/plugins/eq/: EqualizerPlugin.ts
rn-app/src/search/: IdentifyService.ts  UnifiedSearchScreen.tsx
rn-app/src/settings/: ExtremeSettingsModels.ts  ExtremeSettingsScreen.tsx
rn-app/src/state/: dashboardStore.ts  debugStore.ts  mixStore.ts  playerStore.ts  sessionStore.ts  settingsStore.ts  themeStore.ts
rn-app/src/ui/: DNVNSplashScreen.tsx  EdgeLightWrapper.tsx  EdgeVisualizer.tsx  MiniPlayer.tsx  ProfileSyncCard.tsx  ScreenErrorBoundary.tsx  SyncBadge.tsx  SyncSuccessOverlay.tsx
rn-app/src/utils/: permissions.ts
yt-env-expo/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
yt-env-expo/scripts/: piped-proxy.mjs
